Refactor code, fix genres_artist table, work on recommendation service